--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^2.12",
         "mcamara/laravel-localization": "^1.8",
-        "spatie/laravel-medialibrary": "^10.7"
+        "spatie/laravel-activitylog": "^4.7",
+        "spatie/laravel-medialibrary": "^10.7",
+        "spatie/laravel-model-states": "^2.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
