--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^2.12",
         "mcamara/laravel-localization": "^1.8",
+        "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-activitylog": "^4.7",
         "spatie/laravel-medialibrary": "^10.7",
         "spatie/laravel-model-states": "^2.4"
